Update placeholders in mobile menu and signup form

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 
 <!-- MOBILE MENU -->
 <div class="mob" id="mob">
-  <a onclick="gp('home')">🏠 Home</a>
-  <a onclick="gp('packages')">📦 Packages</a>
-  <a onclick="gp('services')">⚙️ Services</a>
-  <a onclick="gp('dashboard')" id="mob-dash-link">📊 Dashboard</a>
-  <a onclick="gp('signin')" id="mob-signin">🔑 Sign In</a>
-  <a onclick="gp('signup')" id="mob-signup">✨ Get Started</a>
+  <a onclick="gp('home')"> Home</a>
+  <a onclick="gp('packages')"> Packages</a>
+  <a onclick="gp('services')"> Services</a>
+  <a onclick="gp('dashboard')" id="mob-dash-link"> Dashboard</a>
+  <a onclick="gp('signin')" id="mob-signin"> Sign In</a>
+  <a onclick="gp('signup')" id="mob-signup"> Get Started</a>
   <a onclick="dologout()" id="mob-logout" style="display:none;">🚪 Sign Out</a>
   <a onclick="gp('dashboard')" id="mob-dash" style="display:none;">📊 My Account</a>
 </div>
@@ -246,11 +246,11 @@
     <div class="ah">Create Account</div>
     <div class="as">Start your NEXRA journey today</div>
     <div class="row2">
-      <div class="fg"><label>First Name</label><input type="text" id="su-fn" placeholder="Ahmed"></div>
-      <div class="fg"><label>Last Name</label><input type="text" id="su-ln" placeholder="Athayi"></div>
+      <div class="fg"><label>First Name</label><input type="text" id="su-fn" placeholder=""></div>
+      <div class="fg"><label>Last Name</label><input type="text" id="su-ln" placeholder=""></div>
     </div>
-    <div class="fg"><label>Email Address</label><input type="email" id="su-em" placeholder="you@email.com"></div>
-    <div class="fg"><label>Phone Number</label><input type="tel" id="su-ph" placeholder="0784237705"></div>
+    <div class="fg"><label>Email Address</label><input type="email" id="su-em" placeholder=""></div>
+    <div class="fg"><label>Phone Number</label><input type="tel" id="su-ph" placeholder=""></div>
     <div class="fg"><label>Company</label><input type="text" id="su-co" placeholder="Your Company Name"></div>
     <div class="fg"><label>Service Interest</label>
       <select id="su-sv">
