Add 'Consultation' option to service selection

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <option>Website Creation</option><option>Custom Software</option>
         <option>POS System</option><option>Digital Marketing</option>
         <option>Mobile App</option><option>AI &amp; Automation</option>
-        <option>Enterprise Package</option>
+        <option>Enterprise Package</option><option>Consultation</option>
       </select>
     </div>
     <div class="fg"><label>Password</label><input type="password" id="su-pw" placeholder="Min 8 characters"><button class="eye" onclick="teye('su-pw',this)">👁️</button></div>
